support Arch and set higher dh

--- a/openvpn/map.jinja
+++ b/openvpn/map.jinja
@@ -3,7 +3,7 @@
         'pkgs': ['openvpn'],
         'service': 'openvpn',
         'conf_dir': '/etc/openvpn',
-        'dh_files': ['1024', '2048'],
+        'dh_files': ['2048'],
         'user': 'nobody',
         'group': 'nogroup',
     },
@@ -11,7 +11,7 @@
         'pkgs': ['openvpn'],
         'service': 'openvpn',
         'conf_dir': '/etc/openvpn',
-        'dh_files': ['1024', '2048'],
+        'dh_files': ['2048'],
         'user': 'nobody',
         'group': 'nogroup',
     },
@@ -19,7 +19,7 @@
         'pkgs': ['openvpn'],
         'service': 'openvpn',
         'conf_dir': '/etc/openvpn',
-        'dh_files': ['1024', '2048'],
+        'dh_files': ['2048'],
         'user': 'nobody',
         'group': 'nobody',
     },
@@ -39,5 +39,12 @@
         'user': 'nobody',
         'group': 'nobody',
     },
-
+    'Arch': {
+        'pkgs': ['openvpn', 'easy-rsa'],
+        'service': 'openvpn@server',
+        'conf_dir': '/etc/openvpn',
+        'dh_files': ['2048'],
+        'user': 'nobody',
+        'group': 'nobody',
+    },
 }, grain='os', merge=salt['pillar.get']('openvpn:lookup')) %}
