support Arch service

--- a/openvpn/map.jinja
+++ b/openvpn/map.jinja
@@ -41,7 +41,7 @@
     },
     'Arch': {
         'pkgs': ['openvpn', 'easy-rsa'],
-        'service': 'openvpn@server',
+        'service': 'openvpn-server@server',
         'conf_dir': '/etc/openvpn',
         'dh_files': ['2048'],
         'user': 'nobody',
